--- a/SistemaDeBecas/build.gradle
+++ b/SistemaDeBecas/build.gradle
@@ -15,16 +15,19 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    maven { url "http://maven.stardog.com" }
+    mavenLocal()
+    mavenCentral()
 }
 
 dependencies {
 	//Dependencias Stardog
-	compile "com.complexible.stardog:server:7.1.2@pom" 
-	compile "com.complexible.stardog.cache:stardog-cache-core:7.1.2" 
-	compile "com.stardog.stark.query:stardog-stark-query-api:7.1.2" 
-	compile "com.stardog.stark.io:stardog-stark-io-api:7.1.2" 
-	compile "com.stardog.stark.query.io:stardog-stark-query-io:7.1.2" 
-	compile "com.complexible.stardog:client-http:7.1.2@pom"
+	compile "com.complexible.stardog:server:6.1.2" 
+	//compile "com.complexible.stardog.cache:stardog-cache-core:6.1.2" 
+	compile "com.stardog.stark.query:stardog-stark-query-api:6.1.2" 
+	compile "com.stardog.stark.io:stardog-stark-io-api:6.1.2" 
+	compile "com.stardog.stark.query.io:stardog-stark-query-io:6.1.2" 
+	compile ("com.complexible.stardog:client-http:6.1.2")
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
