--- a/SistemaDeBecas/build.gradle
+++ b/SistemaDeBecas/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
+    id 'java'
 }
 apply plugin: 'eclipse'
 apply plugin: 'java'
@@ -17,7 +18,7 @@ apply plugin: 'application'
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    //jcenter()
     maven { url "http://maven.stardog.com" }
     mavenLocal()
     mavenCentral()
@@ -26,19 +27,25 @@ repositories {
 dependencies {
 	//Dependencias Stardog
 	compile 'com.complexible.stardog:server:6.1.2' 
-	//compile "com.complexible.stardog.cache:stardog-cache-core:6.1.2" 
-	//compile "com.stardog.stark.query:stardog-stark-query-api:6.1.2" 
-	//compile "com.stardog.stark.io:stardog-stark-io-api:6.1.2" 
-	//compile "com.stardog.stark.query.io:stardog-stark-query-io:6.1.2" 
+	//compile 'com.complexible.stardog.cache:stardog-cache-core:6.1.2'
+	compile 'com.stardog.stark.query:stardog-stark-query-api:6.1.2'
+	compile 'com.stardog.stark.io:stardog-stark-io-api:6.1.2' 
+	compile 'com.stardog.stark.query.io:stardog-stark-query-io:6.1.2'
 	compile 'com.complexible.stardog:client-http:6.1.2'
 
+	//compile "org.slf4j:slf4j-simple:1.7.9" 
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.1'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.1'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.1'
+	
+	testCompile group: 'junit', name: 'junit', version: '4.12'
     // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+   // api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:28.0-jre'
+    //implementation 'com.google.guava:guava:28.0-jre'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+   // testImplementation 'junit:junit:4.12'
 }
 mainClassName  = "Aplicacion"
